--- a/nuon/nuon.aws-ecs-byovpc.toml
+++ b/nuon/nuon.aws-ecs-byovpc.toml
@@ -8,8 +8,8 @@
 # See https://docs.nuon.co/concepts/apps for more information.
 
 version           = "v1"
-description       = "AWS ECS Application deployed to Customer VPC"
-display_name      = "AWS ECS BYOVPC"
+description       = "Deploy the app into a VPC you already have."
+display_name      = "BYOVPC Deployment"
 slack_webhook_url = "https://slack.nuon.co"
 
 [inputs]
