--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,7 @@ jobs:
         run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       - name: Install CLI
         id: cli
-        run: install.sh
+        run: ./scripts/install.sh
       - name: Sync configs
         id: sync
         run: nuon apps sync --all
