--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Deploy
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Set up path
         id: path
         run: echo "${{ github.action_path }}" >> $GITHUB_PATH
@@ -30,4 +32,3 @@ jobs:
       - name: Create releases
         id: release
         run: nuon components list -j | jq '.[].id' | xargs -n 1 nuon releases create --latest-build -c
-        working-directory: ./nuon
