fix: build components from main

--- a/nuon/components/docker_image.toml
+++ b/nuon/components/docker_image.toml
@@ -7,4 +7,4 @@ dockerfile = "Dockerfile"
 [public_repo]
 repo      = "nuonco/demo"
 directory = "src/docker-image"
-branch    = "ja/demo-setup"
+branch    = "main"
