--- a/nuon/nuon.aws-ecs-app.toml
+++ b/nuon/nuon.aws-ecs-app.toml
@@ -27,7 +27,7 @@ runner_type = "aws-ecs"
 terraform_version = "1.5.4"
 # https://docs.nuon.co/guides/install-access-delegation#setup-delegation
 aws_delegation_iam_role_arn = "arn:aws:iam::949309607565:role/aws-ecs-app"
-[public_repo]
+[sandbox.public_repo]
 directory = "aws-ecs"
 repo      = "nuonco/sandboxes"
 branch    = "main"
