fix: use service name as subdomain

--- a/nuon/components/ecs_service.toml
+++ b/nuon/components/ecs_service.toml
@@ -18,5 +18,5 @@ app_id       = "{{.nuon.app.id}}"
 org_id       = "{{.nuon.org.id}}"
 install_id   = "{{.nuon.install.id}}"
 vpc_id       = "{{.nuon.install.sandbox.outputs.vpc.id}}"
-domain_name  = "api.{{.nuon.install.sandbox.outputs.public_domain.name}}"
+domain_name  = "{{.nuon.install.inputs.service_name}}.{{.nuon.install.sandbox.outputs.public_domain.name}}"
 zone_id      = "{{.nuon.install.sandbox.outputs.public_domain.zone_id}}"
