feat: add new env var to ecs service

--- a/nuon/components/ecs_service.toml
+++ b/nuon/components/ecs_service.toml
@@ -20,3 +20,4 @@ install_id   = "{{.nuon.install.id}}"
 vpc_id       = "{{.nuon.install.sandbox.outputs.vpc.id}}"
 domain_name  = "{{.nuon.install.inputs.service_name}}.{{.nuon.install.sandbox.outputs.public_domain.name}}"
 zone_id      = "{{.nuon.install.sandbox.outputs.public_domain.zone_id}}"
+new_env_var = "I just added this."
