--- a/nuon/components/ecs_service.toml
+++ b/nuon/components/ecs_service.toml
@@ -21,3 +21,4 @@ vpc_id       = "{{.nuon.install.sandbox.outputs.vpc.id}}"
 domain_name  = "{{.nuon.install.inputs.service_name}}.{{.nuon.install.sandbox.outputs.public_domain.name}}"
 zone_id      = "{{.nuon.install.sandbox.outputs.public_domain.zone_id}}"
 new_env_var = "I just added this."
+new_env_var = "I also just added this."
